fix overflow bug

--- a/Styles/app.css
+++ b/Styles/app.css
@@ -18,7 +18,7 @@ html {
 .container {
   width: 100%;
   height: 100%;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   /* padding: 20px; */
   position: relative;
 }
