--- a/Styles/responsive.css
+++ b/Styles/responsive.css
@@ -267,6 +267,10 @@
   .item-btn {
     cursor: pointer;
   }
+  .categories {
+    overflow-x: unset;
+    overflow-y: unset;
+  }
   .footer__logo {
     width: 60%;
   }
@@ -280,7 +284,7 @@
 
 @media screen and (min-width: 1280px) {
   body {
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
   }
   .header {
     top: 50px;
@@ -295,9 +299,6 @@
   .header__left-logo-box {
     width: 100px;
     height: 100px;
-  }
-  .categories {
-    overflow-y: scroll;
   }
   .category {
     cursor: pointer;
